Fixed wrapping problem.
I found a great css value called 'overflow-wrap: break-word;'. It
basically breaks a word if that's the only way to wrap overflowing text.
It worked on the project container on the home page, so I applied it to the
whole document. I found it from an article on tutorialpedia.org called
'CSS Wrap Text: A Comprehensive Guide from MDN'.

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 *::after {
     box-sizing: border-box;
     margin: 0;
+    overflow-wrap: break-word;
 }
 
 :root {
@@ -67,9 +68,9 @@ nav {
 
 }
 
-/* nav>* { */
-/*     margin: 0; */
-/* } */
+nav ul li {
+    text-decoration: underline;
+}
 
 nav .navlinks {
     position: absolute;
@@ -185,7 +186,7 @@ nav .navlinks {
         color: saddlebrown;
     }
 
-    white-space: nowrap;
+    white-space: wrap;
     text-overflow: ellipsis;
     margin: 1rem 0rem 0 0;
     background-color: var(--lightYellow);
@@ -377,7 +378,7 @@ button {
     .minorTextProj {
         /* display: inline-block; */
         /* max-width: 100%; */
-        font-size: 58%;
+        font-size: 78%;
     }
 }
 
